# mainer

./: CHANGES.md  LICENSE  README.md  pyproject.toml
src/: mainer.py
